# AshareAgentLab

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  example.env
docs/: architecture.md  llm_costs.md  paper_trading_loop.md  reference_review.md
prompts/: daily_loop_v1.md
scripts/: sync_remote.sh
src/asharelab/: __init__.py  cli.py  config.py  models.py
src/asharelab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/asharelab/agents/: __init__.py  base.py  committee.py  emotion.py  hypothesis.py  scout.py  skeptic.py
src/asharelab/data/: __init__.py  akshare_source.py  sources.py  tushare_source.py
src/asharelab/llm/: __init__.py  budget.py  client.py
src/asharelab/memory/: __init__.py  store.py
src/asharelab/reports/: __init__.py  markdown.py
src/asharelab/research/: __init__.py  eventstudy.py
src/asharelab/trading/: __init__.py  loop.py  portfolio.py  rules.py
tests/: test_budget.py  test_committee.py  test_memory.py  test_paper_loop.py
