[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asharelab"
version = "0.1.0"
description = "LLM-native A-share narrative and hypothesis research lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "pandas>=2.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
china-data = [
  "akshare>=1.15.0",
  "tushare>=1.4.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
asharelab = "asharelab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

